--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,39 @@
-# Maven files/directories
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+## Java
 
-# Java
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
 *.war
 *.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-*.pydevproject
+## GWT
+war/
+html/war/gwt_bree/
+html/gwt-unitCache/
+.apt_generated/
+html/war/WEB-INF/deploy/
+html/war/WEB-INF/classes/
+.gwt/
+gwt-unitCache/
+www-test/
+.gwt-tmp/
+
+## Android Studio and Intellij and Android in general
+android/libs/armeabi/
+android/libs/armeabi-v7a/
+android/libs/x86/
+android/gen/
+.idea/
+*.ipr
+*.iws
+*.iml
+out/
+com_crashlytics_export_strings.xml
+
+## Eclipse
+.classpath
+.project
 .metadata
-.gradle
-bin/
+**/bin/
 tmp/
 *.tmp
 *.bak
@@ -34,61 +42,23 @@ tmp/
 local.properties
 .settings/
 .loadpath
-
-# Eclipse Core
-.project
-
-# External tool builders
 .externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
 *.launch
 
-# CDT-specific
-.cproject
+## NetBeans
+**/nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
 
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+## Gradle
 
-# PDT-specific
-.buildpath
+.gradle
+gradle-app.setting
+build/
 
-# sbteclipse plugin
-.target
-
-# TeXlipse plugin
-.texlipse
-
-# Intellij
-.idea/
-*.iml
-*.iws
-*.ipr
-/out/
-
-### OSX ###
+## OS Specific
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
