--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,7 @@ android/libs/armeabi-v7a/
 android/libs/x86/
 android/gen/
 .idea/
-.ipr
-.iws
-.iml
+*.iws
 out/
 com_crashlytics_export_strings.xml
 
