--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@ android/libs/armeabi-v7a/
 android/libs/x86/
 android/gen/
 .idea/
+## *.ipr
 *.iws
+## *.iml
 out/
 com_crashlytics_export_strings.xml
 
@@ -54,9 +56,9 @@ nb-configuration.xml
 
 ## Gradle
 
-*.gradle
+.gradle
 gradle-app.setting
 build/
 
 ## OS Specific
-*.DS_Store
+.DS_Store
