--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+        testCompile 'junit:junit:4.12'
         providedCompile "org.projectlombok:lombok:1.16.4"
     }
 }
@@ -58,6 +59,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+        testCompile 'junit:junit:4.12'
         providedCompile "org.projectlombok:lombok:1.16.4"
     }
 }
